# soco-deezer-plugin

./: .gitignore  Makefile  README.rst  TODO.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  tox.ini
soco_deezer_plugin/: soco_deezer.py
tests/: test_example.py  test_soco_deezer_plugin.py
tests/requests/: setup.yaml  test_with_deezer_python_objects.yaml  test_with_ids.yaml
