[metadata]
name = soco_deezer_plugin
version = attr: soco_deezer_plugin.__version__
description = SoCo Deezer plugin is design to add Deezer tracks and albums into Sonos queue.
long_description = file: README.rst
keywords = Sonos, Deezer
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
packages = find:
install_requires =
  soco
  deezer-python
